# easyquant

./: .condarc  .env.example  .geminiignore  .gitignore  AI_HANDOVER_GUIDE.md  CLAUDE.md  DEVELOPMENT_TODO.md  FRONTEND_ETL_GUIDE.md  GEMINI.md  PROJECT_DESIGN.md  README.md  STARTUP.md  alembic.ini  bj920000.csv  check_dbs.py  config.py  create_tables.sql  debug_handlers.py  debug_publish.py  debug_ws.py  debug_ws_v2.py  devlog.md  diagnose_db.py  fix_tables.py  inspect_tables.py  logging_config.py  manage.py  manual_migrate.py  package-lock.json  preview_sql.py  pyproject.toml  requirements.txt  run_etl.py  start.sh  stop.sh  test_events_generator.py
alembic/: README  env.py  script.py.mako
alembic/versions/: 001_add_fields_to_stock_daily.py  457c2176c7ac_refactor_workflow_nodes_add_version_.py  46b5cc096aa5_create_workflow_nodes_table.py  4c137122a529_add_etl_task_config.py  60d403367b7a_init_correct_schema.py  67cab60bda74_remove_workflow_nodes_tables.py  911330050425_rebuild_data_table_schema_v2.py  (+6 more)
client/: DESIGN_SYSTEM.md  DEVLOG.md  README.md  check_env.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.ts
client/src/: App.jsx  (+3 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: architecture_design.md  workflow-design.md
etl/: README.md  baostock_source.py  base.py  csv_source.py  executor.py  scheduler.py
logs/: services.pid
pic/: ui.md
server/: bootstrap.py  main.py  test_client.html
storage/: base.py  postgresql.py
tests/: test_csv_loader.py  test_pipeline_factory.py
(+289 files in other folders)
