[tool.poetry]
name = "easyquant"
version = "0.1.0"
description = "A modern, async-first quantitative trading framework."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncpg"], version = "^2.0.0"}
alembic = "^1.13.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
pydantic = "^2.8.2"
aiofiles = "^23.2.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
